--- a/index.html
+++ b/index.html
@@ -1207,15 +1207,14 @@
     <!-- Brand Intro -->
     <section class="pattern-bg" style="padding-top: 6rem;">
         <div class="brand-intro">
-            Welcome to Orbit Hotel, your home away from home in Dire Dawa. We are both an authentic Ethiopian restaurant and a comfortable hotel, located just 2 minutes from the airport. Whether you're staying with us or dining in, we honor the communal spirit of Ethiopian culture—serving traditional dishes on injera with love and care, and offering warm hospitality in our clean, modern rooms. From our aromatic coffee ceremony to the bold flavors of our wots and tibs, and from comfortable overnight stays to memorable meals, every experience celebrates heritage, warmth, and togetherness.
+            Welcome to Orbit Hotel, your home away from home in Dire Dawa. We give you the best of Ethiopia and Africa: good food and premium accomodation. We are located just 2 minutes from the airport. So whether you're staying with us or dining in, we honor the communal spirit of Ethiopian and African hospitality culture, tending to you with love and care. From our aromatic coffee ceremony to the bold flavors of our wots and tibs, and from comfortable overnight stays to memorable meals, every experience celebrates heritage, warmth, and togetherness.
         </div>
     </section>
 
     <!-- Featured Dishes -->
     <section id="menu" class="pattern-bg">
         <h2 class="section-title">Signature Dishes</h2>
-        <p class="section-subtitle">Traditional and modern Ethiopian favorites, prepared with authentic spices and served with injera</p>
-        
+        <p class="section-subtitle">Traditional and modern Ethiopian and African favorites, prepared with authentic spices. Served fresh and warm, just in time to feed all your cravings. </p>
         <div class="dishes-grid">
             <div class="dish-card">
                 <div class="dish-image">
@@ -1291,16 +1290,16 @@
 
     <!-- What to Expect -->
     <div class="expect-section">
-        <h2 class="section-title">The Ethiopian Dining Experience</h2>
+        <h2 class="section-title">Delightful Dining and Living </h2>
         <div class="expect-content">
-            Experience the warmth of Ethiopian hospitality in our authentic dining space. Meals are served communally on injera, Ethiopia's signature sourdough flatbread, encouraging sharing and connection. Watch as we prepare traditional coffee in our ceremonial jebena, filling the air with rich aromas. Whether you're new to Ethiopian cuisine or a longtime enthusiast, our friendly staff will guide you through the flavors and traditions that make every meal a cultural celebration.
+            Experience the warmth of Continental and African hospitality in our authentic dining and living spaces. Meals are served with love and care, ensuring that you savour every bite delightfully. We embrace personal and communial dining experiences, Watch as we prepare traditional coffee in our ceremonial jebena, filling the air with rich aromas. Whether you're new to Ethiopian, Somali, or African cuisines, or a longtime enthusiast, our friendly staff will guide you through the flavors and traditions that make every meal a cultural celebration. Finally, enjoy our cozy accomodation facilities
         </div>
     </div>
 
     <!-- Services -->
     <section class="pattern-bg">
         <h2 class="section-title">How We Serve You</h2>
-        <p class="section-subtitle">Bringing Ethiopian traditions to Dire Dawa</p>
+        <p class="section-subtitle">Bringing Premium Experiences to Dire Dawa</p>
         
         <div class="services-grid">
             <div class="service-card">
@@ -1630,7 +1629,7 @@
             'images/gallery/interior.jpg',
             'images/gallery/kitchen.jpg',
             'images/gallery/seating1.jpg',
-            'images/gallery/serving.jpg'
+            'images/gallery/spices.jpg'
         ];
 
         const roomImages = [
